--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
         </a>
       </div>
     </section>
-    <section id="Widzew"><img src="assets/herb.png" alt="" /></section>
+    <section id="Widzew">
+      <div id="crest">
+        <img src="assets/herb.png" alt="" width="94px" height="100px" />
+        <p>WIDZEW ŁÓDŹ</p>
+      </div>
+      <div id="audioButtons"></div>
+      <div id="shopButtons"></div>
+    </section>
     <section id="navigation">
       <div id="controlPanel">
         <p>AKTUALNOŚĆI</p>
