--- a/index.html
+++ b/index.html
@@ -36,8 +36,28 @@
         <img src="assets/herb.png" alt="" width="94px" height="100px" />
         <p>WIDZEW ŁÓDŹ</p>
       </div>
-      <div id="audioButtons"></div>
-      <div id="shopButtons"></div>
+      <div id="audioButtons">
+        <a id="tv">
+          <img src="assets/TV.png" alt="" width="30px" height="30px" />
+          <p>TV</p>
+        </a>
+        <a id="mic">
+          <img src="assets/Mikrofon.png" alt="" width="28px" height="28px" />
+          <p>FM</p>
+        </a>
+        <a id="play">
+          <img src="assets/Play.png" alt="" width="25px" height="25px" />
+          <img src="" alt="" />
+        </a>
+      </div>
+      <div id="shopButtons">
+        <button id="bilet">
+          <a href="">KUP BILETY</a>
+        </button>
+        <button id="sklep">
+          <a href="">SKLEP</a>
+        </button>
+      </div>
     </section>
     <section id="navigation">
       <div id="controlPanel">
