--- a/index.html
+++ b/index.html
@@ -47,32 +47,40 @@
         </a>
         <a id="play">
           <img src="assets/Play.png" alt="" width="25px" height="25px" />
-          <img src="" alt="" />
+          <img src="assets/Volume.png" alt="" />
         </a>
       </div>
       <div id="shopButtons">
-        <button id="bilet">
-          <a href="">KUP BILETY</a>
-        </button>
-        <button id="sklep">
-          <a href="">SKLEP</a>
-        </button>
+        <button id="bilet">KUP BILETY</button>
+        <button id="sklep">SKLEP</button>
       </div>
     </section>
     <section id="navigation">
-      <div id="controlPanel">
-        <p>AKTUALNOŚĆI</p>
-        <p>ZESPOŁY</p>
-        <p>ROZGRYWKI</p>
-        <p>KLUB</p>
-        <p>AKADEMIA</p>
-        <p>MŁODY WIDZEW</p>
-        <p>SPOŁECZNOŚĆ</p>
-        <p>BIZNES</p>
+      <div id="AllControl">
+        <ul id="controlPanel">
+          <li class="navElement">
+            <p>AKTUALNOŚĆI</p>
+            <ul>
+              <li>WIDZEW.FM</li>
+              <li>WIDZEWTV</li>
+              <li>GALERIE ZDJĘĆ</li>
+            </ul>
+          </li>
+          <li class="navElement"><p>ZESPOŁY</p></li>
+          <li class="navElement"><p>ROZGRYWKI</p></li>
+          <li class="navElement"><p>KLUB</p></li>
+          <li class="navElement"><p>AKADEMIA</p></li>
+          <li class="navElement"><p>MŁODY WIDZEW</p></li>
+          <li class="navElement"><p>SPOŁECZNOŚĆ</p></li>
+          <li class="navElement"><p>BIZNES</p></li>
+        </ul>
+        <img src="assets/Lupa.png" alt="" width="25px" height="25px" />
       </div>
-      <img src="" alt="" />
     </section>
-    <section></section>
+    <section id="matches">
+      <div class="image-container"></div>
+      <div id="matchbox"></div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
