--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
     </section>
     <section id="matches">
       <div class="image-container"></div>
-      <div id="matchbox"></div>
+      <div id="matchbox">
+        <div id="matchboxes">
+          <div class="matchbox13"></div>
+          <div id="matchbox2"></div>
+          <div class="matchbox13"></div>
+        </div>
+      </div>
     </section>
     <section></section>
     <section></section>
