--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
     <section id="matches">
       <div class="image-container"></div>
       <div id="matchbox">
+        <div id="header">
+          <div id="textBox">
+            <div id="title1">MECZE PIERWSZEJ DRUŻYNY</div>
+            <div id="matchResults">
+              <a href="">TABELA</a>
+              <a href="">TERMINARZ I WYNIKI</a>
+            </div>
+          </div>
+          <div id="counting">
+            <div>DO NASTĘPNEGO MECZU POZOSTAŁO</div>
+            <div></div>
+          </div>
+        </div>
         <div id="matchboxes">
           <div class="matchbox13"></div>
           <div id="matchbox2"></div>
