--- a/index.html
+++ b/index.html
@@ -94,7 +94,49 @@
           </div>
         </div>
         <div id="matchboxes">
-          <div class="matchbox13"></div>
+          <div class="matchbox13">
+            <div class="middle">
+              <div id="part1">
+                <div class="date1">31</div>
+                <span>
+                  <div class="month">STYCZNIA</div>
+                  <div class="dayOfTheWeek">ŚRODA</div>
+                </span>
+              </div>
+              <div id="part2">
+                <div class="logoCrest">
+                  <img
+                    src="assets/widzew_lodz.png"
+                    alt=""
+                    width="50px"
+                    height="50px"
+                  />
+                  <div>WIDZEW LÓDŹ</div>
+                </div>
+                <span>0:2</span>
+                <div class="logoCrest">
+                  <img
+                    src="assets/Slovian.png"
+                    alt=""
+                    width="50px"
+                    height="50px"
+                  />
+                  <div>SLOVAN LIBEREC</div>
+                </div>
+              </div>
+              <div id="part3">Turcja</div>
+              <div id="part4">
+                <button>
+                  <img
+                    src="assets/Pitch.png"
+                    alt=""
+                    height="32px"
+                    width="32px"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
           <div id="matchbox2"></div>
           <div class="matchbox13"></div>
         </div>
