--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
         <div id="matchboxes">
           <div class="matchbox13">
             <div class="middle">
-              <div id="part1">
+              <div class="part1">
                 <div class="date1">31</div>
                 <span>
                   <div class="month">STYCZNIA</div>
                   <div class="dayOfTheWeek">ŚRODA</div>
                 </span>
               </div>
-              <div id="part2">
+              <div class="part2">
                 <div class="logoCrest">
                   <img
                     src="assets/widzew_lodz.png"
@@ -124,21 +124,73 @@
                   <div>SLOVAN LIBEREC</div>
                 </div>
               </div>
-              <div id="part3">Turcja</div>
-              <div id="part4">
+              <div class="part3">Turcja</div>
+              <div class="part4">
                 <button>
-                  <img
-                    src="assets/Pitch.png"
-                    alt=""
-                    height="32px"
-                    width="32px"
-                  />
+                  <img src="assets/Pitch.png" alt="" />
                 </button>
               </div>
             </div>
           </div>
-          <div id="matchbox2"></div>
-          <div class="matchbox13"></div>
+          <div id="matchbox2">
+            <div class="middle">
+              <div class="part1">
+                <div class="date1">11</div>
+                <span>
+                  <div class="month">LUTEGO</div>
+                  <div class="dayOfTheWeek">NIEDZIELA</div>
+                </span>
+                <img
+                  src="assets/logo-ekstraklasa-pko.png"
+                  alt=""
+                  height="30px"
+                  width="110px"
+                />
+              </div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+          <div class="matchbox13">
+            <div class="middle">
+              <div class="part1">
+                <div class="date1">18</div>
+                <span>
+                  <div class="month">LUTEGO</div>
+                  <div class="dayOfTheWeek">NIEDZIELA</div>
+                </span>
+                <img
+                  src="assets/logo-ekstraklasa-pko.png"
+                  alt=""
+                  height="30px"
+                  width="110px"
+                />
+              </div>
+              <div class="part2">
+                <div class="logoCrest">
+                  <img src="assets/łks.png" width="50px" height="50px" />
+                  <div>ŁKS ŁÓDŹ</div>
+                </div>
+                <span id="hour">17:30</span>
+                <div class="logoCrest">
+                  <img
+                    src="assets/widzew_lodz.png"
+                    alt=""
+                    width="50px"
+                    height="50px"
+                  />
+                  <div>WIDZEW LÓDŹ</div>
+                </div>
+              </div>
+              <div class="part3">al.Unii 2</div>
+              <div class="part4">
+                <button>
+                  <img src="assets/Pitch.png" alt="" />
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
