--- a/index.html
+++ b/index.html
@@ -147,9 +147,38 @@
                   width="110px"
                 />
               </div>
-              <div></div>
-              <div></div>
-              <div></div>
+              <div class="part2">
+                <div class="logoCrest">
+                  <img
+                    src="assets/widzew_lodz.png"
+                    alt=""
+                    height="80px"
+                    width="80px"
+                  />
+                  <div>WIDZEW ŁÓDŹ</div>
+                </div>
+                <div id="betweenCrest">
+                  <div id="betweenCrestElement1">15:00</div>
+                  <div class="betweenCrestElement2">
+                    Stadion Widzewa Łódź Serce Łodzi
+                  </div>
+                  <div id="betweenCrestElement3">17 777</div>
+                  <div class="betweenCrestElement2">sprzedanych biletów</div>
+                </div>
+                <div class="logoCrest">
+                  <img
+                    src="assets/jagiellonia-bialystok-logo.png"
+                    alt=""
+                    width="80px"
+                    height="80px"
+                  />
+                  <div>JAGIELLONIA BIAŁYSTOK</div>
+                </div>
+              </div>
+              <div id="matchButtons">
+                <button id="matchCenter">CENTRUM MECZOWE</button>
+                <button id="audioRelations">STUDIO I RELACJA AUDIO</button>
+              </div>
             </div>
           </div>
           <div class="matchbox13">
