--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   <img src="assets/łks.png" width="50px" height="50px" />
                   <div>ŁKS ŁÓDŹ</div>
                 </div>
-                <span id="hour">17:30</span>
+                <span id="hour">0:2</span>
                 <div class="logoCrest">
                   <img
                     src="assets/widzew_lodz.png"
@@ -223,7 +223,17 @@
         </div>
       </div>
     </section>
-    <section></section>
+    <section>
+      <div id="shop">
+        <div id="newsletter">
+          <img src="assets/Newsletter.jpg" alt="" />
+        </div>
+        <div id="officialShop">
+          <img src="assets/Shop.jpg" alt="" />
+        </div>
+        <div id="vip"><img src="assets/Vip.jpg" alt="" /></div>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
