--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section id="redSection">
       <div id="shop">
         <div id="newsletter">
           <img src="assets/Newsletter.jpg" alt="" />
@@ -232,6 +232,21 @@
           <img src="assets/Shop.jpg" alt="" />
         </div>
         <div id="vip"><img src="assets/Vip.jpg" alt="" /></div>
+      </div>
+      <div id="news">
+        <div id="newsLine1">
+          <h1>AKTUALNOŚCI</h1>
+          <div>
+            <a href="">DRUŻYNA</a>
+            <a href="">TRANSFERY</a>
+            <a href="">AKADEMIA</a>
+            <a href="">RAZEM TWORZYMY SPOŁECZNOŚĆ</a>
+            <a href="">BIZNES</a>
+          </div>
+        </div>
+        <div id="newsLine2"></div>
+        <div id="newsLine3"></div>
+        <div id="newsLine4"></div>
       </div>
     </section>
     <section></section>
