--- a/index.html
+++ b/index.html
@@ -244,9 +244,21 @@
             <a href="">BIZNES</a>
           </div>
         </div>
-        <div id="newsLine2"></div>
-        <div id="newsLine3"></div>
-        <div id="newsLine4"></div>
+        <div id="newsLine2">
+          <img src="assets/Mysliwiec-WIDWAR.jpg" alt="" /><img
+            src="assets/Chorągiewka.jpg"
+            alt=""
+          />
+        </div>
+        <div id="newsLine3">
+          <img src="assets/Akademia.jpg" alt="" /><img
+            src="assets/Daniel Stefański.jpg"
+            alt=""
+          /><img src="assets/Stadion.jpg" alt="" />
+        </div>
+        <div id="newsLine4">
+          <button>WSZYSTKIE AKTUALNOŚCI</button>
+        </div>
       </div>
     </section>
     <section></section>
