--- a/index.html
+++ b/index.html
@@ -261,7 +261,24 @@
         </div>
       </div>
     </section>
-    <section></section>
+    <section id="whiteBoard">
+      <div id="Academy">
+        <div id="boxAcademy">
+          <h1>AKADEMIA WIDZEWA</h1>
+          <h2>SPONSORZY AKADEMII</h2>
+          <div>
+            <div>
+              <button>KONTAKT</button>
+              <button>AKTUALNOŚCI</button>
+              <button>MŁODY WIDZEW</button>
+            </div>
+          </div>
+          <div></div>
+        </div>
+      </div>
+      <div></div>
+      <div></div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
