--- a/index.html
+++ b/index.html
@@ -272,8 +272,23 @@
               <button>AKTUALNOŚCI</button>
               <button>MŁODY WIDZEW</button>
             </div>
+            <div id="sponsors">
+              <div><</div>
+              <a href="">
+                <img src="assets/safty jogger.png" alt="" />
+              </a>
+              <a href="">
+                <img src="assets/tylkowidzew.png" alt="" />
+              </a>
+              <a href="">
+                <img src="assets/pge.png" alt="" />
+              </a>
+              <a href="">
+                <img src="assets/toyota.png" alt="" />
+              </a>
+              <div>></div>
+            </div>
           </div>
-          <div></div>
         </div>
       </div>
       <div></div>
