--- a/index.html
+++ b/index.html
@@ -314,7 +314,52 @@
           </div>
         </div>
       </div>
-      <div></div>
+      <div id="market">
+        <h1>SKLEP</h1>
+        <div id="products">
+          <div>
+            <img src="assets/bilet kolekcjonerski.jpg" alt="" />
+            <div>
+              <div>
+                <div>BILET KOLEKCJONERSKI WIDZEW ŁÓDŹ - RADOMIAK RADOM</div>
+                <p>15,00zł</p>
+              </div>
+              <button><img src="assets/bag-icon.png" alt="" /></button>
+            </div>
+          </div>
+          <div>
+            <img src="assets/fotel.jpg" alt="" />
+            <div>
+              <div>
+                <div>FOTEL GAMINGOWY</div>
+                <p>1299,00ZŁ</p>
+              </div>
+              <button><img src="assets/bag-icon.png" alt="" /></button>
+            </div>
+          </div>
+          <div>
+            <img src="assets/czapka bordo.jpg" alt="" />
+            <div>
+              <div>
+                <div>CZAPKA BORDO POMPON</div>
+                <p>59,00ZŁ</p>
+              </div>
+              <button><img src="assets/bag-icon.png" alt="" /></button>
+            </div>
+          </div>
+          <div>
+            <img src="assets/czapka czarna.jpg" alt="" />
+            <div>
+              <div>
+                <div>CZAPKA CZARNA KLASYCZNA</div>
+                <p>59,00ZŁ</p>
+              </div>
+              <button><img src="assets/bag-icon.png" alt="" /></button>
+            </div>
+          </div>
+        </div>
+        <button>PRZEJDŻ DO SKLEPU</button>
+      </div>
     </section>
     <section></section>
     <section></section>
