--- a/index.html
+++ b/index.html
@@ -315,50 +315,74 @@
         </div>
       </div>
       <div id="market">
-        <h1>SKLEP</h1>
+        <h1>S K L E P</h1>
         <div id="products">
-          <div>
+          <div class="marketBox">
             <img src="assets/bilet kolekcjonerski.jpg" alt="" />
-            <div>
+            <div class="marketBoxText">
               <div>
                 <div>BILET KOLEKCJONERSKI WIDZEW ŁÓDŹ - RADOMIAK RADOM</div>
                 <p>15,00zł</p>
               </div>
-              <button><img src="assets/bag-icon.png" alt="" /></button>
+              <button><img src="assets/bag-icon2.png" alt="" /></button>
             </div>
           </div>
-          <div>
+          <div class="marketBox">
             <img src="assets/fotel.jpg" alt="" />
-            <div>
+            <div class="marketBoxText">
               <div>
                 <div>FOTEL GAMINGOWY</div>
                 <p>1299,00ZŁ</p>
               </div>
-              <button><img src="assets/bag-icon.png" alt="" /></button>
+              <button><img src="assets/bag-icon2.png" alt="" /></button>
             </div>
           </div>
-          <div>
+          <div class="marketBox">
             <img src="assets/czapka bordo.jpg" alt="" />
-            <div>
+            <div class="marketBoxText">
               <div>
                 <div>CZAPKA BORDO POMPON</div>
                 <p>59,00ZŁ</p>
               </div>
-              <button><img src="assets/bag-icon.png" alt="" /></button>
+              <button><img src="assets/bag-icon2.png" alt="" /></button>
             </div>
           </div>
-          <div>
+          <div class="marketBox">
             <img src="assets/czapka czarna.jpg" alt="" />
-            <div>
+            <div class="marketBoxText">
               <div>
                 <div>CZAPKA CZARNA KLASYCZNA</div>
                 <p>59,00ZŁ</p>
               </div>
-              <button><img src="assets/bag-icon.png" alt="" /></button>
+              <button><img src="assets/bag-icon2.png" alt="" /></button>
             </div>
           </div>
         </div>
         <button>PRZEJDŻ DO SKLEPU</button>
+      </div>
+      <div id="multimedia">
+        <h1>MULTIMEDIA</h1>
+        <div id="multimediaNavigation">
+          <div id="navigationBoxOne">WIDZEW TV</div>
+          <div id="navigationBoxTwo">GALERIE</div>
+          <div id="navigationBoxThree">
+            <img src="" alt="" />
+            <p>SYBSKRYBUJ NASZ KANAŁ</p>
+          </div>
+        </div>
+        <div id="multimediaBox">
+          <iframe
+            src="https://youtu.be/FffQs9KEhnw"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+          <div>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button>ZOBACZ WIĘCEJ WIDEO</button>
+          </div>
+        </div>
       </div>
     </section>
     <section></section>
