--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
       </div>
     </section>
-    <section id="Widzew">
+    <header id="Widzew">
       <div id="crest">
         <img src="assets/herb.png" alt="" width="94px" height="100px" />
         <p>WIDZEW ŁÓDŹ</p>
@@ -54,8 +54,8 @@
         <button id="bilet">KUP BILETY</button>
         <button id="sklep">SKLEP</button>
       </div>
-    </section>
-    <section id="navigation">
+    </header>
+    <nav id="navigation">
       <div id="AllControl">
         <ul id="controlPanel">
           <li class="navElement">
@@ -76,7 +76,7 @@
         </ul>
         <img src="assets/Lupa.png" alt="" width="25px" height="25px" />
       </div>
-    </section>
+    </nav>
     <section id="matches">
       <div class="image-container"></div>
       <div id="matchbox">
@@ -367,19 +367,54 @@
           <div id="navigationBoxTwo">GALERIE</div>
           <div id="navigationBoxThree">
             <img src="" alt="" />
-            <p>SYBSKRYBUJ NASZ KANAŁ</p>
+            <p>SUBSKRYBUJ NASZ KANAŁ</p>
           </div>
         </div>
         <div id="multimediaBox">
-          <iframe
-            src="https://youtu.be/FffQs9KEhnw"
-            frameborder="0"
-            allowfullscreen
-          ></iframe>
+          <img src="assets/wypowiedzi śląsk-widzew.jpg" alt="" />
           <div>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button id="videoOne" class="videos">
+              <img src="assets/kulisy.jpg" alt="" />
+              <div>
+                <div>
+                  <div></div>
+                  <div>
+                    <p></p>
+                    <p></p>
+                  </div>
+                </div>
+                <div></div>
+                <div></div>
+              </div>
+            </button>
+            <button id="videoTwo" class="videos">
+              <img src="assets/wypowiedzi pomeczowe.jpg" alt="" />
+              <div>
+                <div>
+                  <div></div>
+                  <div>
+                    <p></p>
+                    <p></p>
+                  </div>
+                </div>
+                <div></div>
+                <div></div>
+              </div>
+            </button>
+            <button id="videoThree" class="videos">
+              <img src="assets/kulisy meczu widzew-górnik.jpg" alt="" />
+              <div>
+                <div>
+                  <div></div>
+                  <div>
+                    <p></p>
+                    <p></p>
+                  </div>
+                </div>
+                <div></div>
+                <div></div>
+              </div>
+            </button>
             <button>ZOBACZ WIĘCEJ WIDEO</button>
           </div>
         </div>
@@ -387,6 +422,6 @@
     </section>
     <section></section>
     <section></section>
-    <section></section>
+    <footer></footer>
   </body>
 </html>
