--- a/index.html
+++ b/index.html
@@ -376,43 +376,48 @@
             <button id="videoOne" class="videos">
               <img src="assets/kulisy.jpg" alt="" />
               <div>
-                <div>
-                  <div></div>
+                <div class="dataMultimedia">
+                  <h2>1</h2>
                   <div>
-                    <p></p>
-                    <p></p>
+                    <p>MARCA 2024</p>
+                    <p id="multimediaHour">21:00</p>
                   </div>
                 </div>
-                <div></div>
-                <div></div>
+                <div>------ I DRUŻYNA</div>
+                <div>
+                  KONIEC PIĘKNEJ PRZYGODY. KULISY MECZU WISŁA KRAKÓW - WIDZEW
+                  ŁÓDŹ
+                </div>
               </div>
             </button>
             <button id="videoTwo" class="videos">
               <img src="assets/wypowiedzi pomeczowe.jpg" alt="" />
               <div>
-                <div>
-                  <div></div>
+                <div class="dataMultimedia">
+                  <h2>29</h2>
                   <div>
-                    <p></p>
-                    <p></p>
+                    <p>LUTEGO 2024</p>
+                    <p id="multimediaHour">12:10</p>
                   </div>
                 </div>
-                <div></div>
-                <div></div>
+                <div>------ I DRUŻYNA</div>
+                <div>WYPOWIEDZI PO MECZU WISŁA KRAKÓW - WIDZEW ŁÓDŹ 2:1</div>
               </div>
             </button>
             <button id="videoThree" class="videos">
               <img src="assets/kulisy meczu widzew-górnik.jpg" alt="" />
               <div>
-                <div>
-                  <div></div>
+                <div class="dataMultimedia">
+                  <h2>27</h2>
                   <div>
-                    <p></p>
-                    <p></p>
+                    <p>LUTEGO 2024</p>
+                    <p id="multimediaHour">18:00</p>
                   </div>
                 </div>
-                <div></div>
-                <div></div>
+                <div>------ I DRUŻYNA</div>
+                <div>
+                  RAZ, DWA, TRZY! KULISY MECZU WIDZEW ŁÓDŹ - GÓRNIK ZABRZE
+                </div>
               </div>
             </button>
             <button>ZOBACZ WIĘCEJ WIDEO</button>
