--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           <div id="navigationBoxOne">WIDZEW TV</div>
           <div id="navigationBoxTwo">GALERIE</div>
           <div id="navigationBoxThree">
-            <img src="" alt="" />
+            <img src="./assets/dzwonek.png" alt="" />
             <p>SUBSKRYBUJ NASZ KANAŁ</p>
           </div>
         </div>
@@ -383,10 +383,12 @@
                     <p id="multimediaHour">21:00</p>
                   </div>
                 </div>
-                <div>------ I DRUŻYNA</div>
-                <div>
-                  KONIEC PIĘKNEJ PRZYGODY. KULISY MECZU WISŁA KRAKÓW - WIDZEW
-                  ŁÓDŹ
+                <div class="multimediaText">
+                  <span>――― I DRUŻYNA</span>
+                  <div>
+                    KONIEC PIĘKNEJ PRZYGODY. KULISY MECZU WISŁA KRAKÓW - WIDZEW
+                    ŁÓDŹ
+                  </div>
                 </div>
               </div>
             </button>
@@ -400,8 +402,10 @@
                     <p id="multimediaHour">12:10</p>
                   </div>
                 </div>
-                <div>------ I DRUŻYNA</div>
-                <div>WYPOWIEDZI PO MECZU WISŁA KRAKÓW - WIDZEW ŁÓDŹ 2:1</div>
+                <div class="multimediaText">
+                  <span>――― I DRUŻYNA</span>
+                  <div>WYPOWIEDZI PO MECZU WISŁA KRAKÓW - WIDZEW ŁÓDŹ 2:1</div>
+                </div>
               </div>
             </button>
             <button id="videoThree" class="videos">
@@ -414,13 +418,15 @@
                     <p id="multimediaHour">18:00</p>
                   </div>
                 </div>
-                <div>------ I DRUŻYNA</div>
-                <div>
-                  RAZ, DWA, TRZY! KULISY MECZU WIDZEW ŁÓDŹ - GÓRNIK ZABRZE
+                <div class="multimediaText">
+                  <span>――― I DRUŻYNA</span>
+                  <div>
+                    RAZ, DWA, TRZY! KULISY MECZU WIDZEW ŁÓDŹ - GÓRNIK ZABRZE
+                  </div>
                 </div>
               </div>
             </button>
-            <button>ZOBACZ WIĘCEJ WIDEO</button>
+            <button id="moreVideoButton">ZOBACZ WIĘCEJ WIDEO</button>
           </div>
         </div>
       </div>
