--- a/index.html
+++ b/index.html
@@ -430,8 +430,22 @@
           </div>
         </div>
       </div>
+       <div id="advertiseOne">
+        <div>
+          <img src="./assets/sts.jpg" alt="">
+        </div>
+      </div>
+      </div>
+      <div id="advertiseTwo">
+        <div>
+          <img src="./assets/mieszkanie.jpg" alt="">
+        </div>
+      </div>
     </section>
-    <section></section>
+    <section>
+      <div id="team"></div>
+      <div id="goals"></div>
+    </section>
     <section></section>
     <footer></footer>
   </body>
