--- a/index.html
+++ b/index.html
@@ -442,9 +442,19 @@
         </div>
       </div>
     </section>
-    <section>
-      <div id="team"></div>
-      <div id="goals"></div>
+    <section id="goalsAndAchievements">
+      <div id="team">
+        <h2>PIERWSZA DRUŻYNA </h2>
+        <hr class="line"></hr>
+        <div>
+          <div><img src="./assets/rondić.jpg" alt=""></div>
+          <div><img src="./assets/gikiewicz.jpg" alt=""></div>
+          <div></div>
+          <div><img src="./assets/młody.jpg" alt=""></div>
+        </div>
+        <hr class="line"></hr>
+      </div>
+      <div id="achievements"></div>
     </section>
     <section></section>
     <footer></footer>
