--- a/index.html
+++ b/index.html
@@ -447,9 +447,32 @@
         <h2>PIERWSZA DRUŻYNA </h2>
         <hr class="line"></hr>
         <div>
-          <div><img src="./assets/rondić.jpg" alt=""></div>
-          <div><img src="./assets/gikiewicz.jpg" alt=""></div>
-          <div></div>
+          <div><img src="./assets/99_Rondic.png" alt=""></div>
+          <div><img src="./assets/1_Gikiewicz.png" alt=""></div>
+          <div id="rafałGikiewicz">
+            <div id="gikiewiczStats">
+              <span>RAFAŁ GIKIEWICZ</span>
+              <h2>BRAMKARZ</h2>
+              <div>
+                <div>
+                  <span>MECZE</span>
+                  <p>4</p>
+                </div>
+                <div>
+                  <span>BRAMKI</span>
+                  <p>0</p>
+                </div>
+                <div>
+                  <span>ASYSTY</span>
+                  <p>0</p>
+                </div>
+              </div>
+            </div>
+            <div id="gikiewiczProfile">
+              <button id="playerProfile">PROFIL ZAWODNIKA</buttons>
+              <button id="buyTshirt">KUP KOSZULKĘ</buttons>
+            </div>
+          </div>
           <div><img src="./assets/młody.jpg" alt=""></div>
         </div>
         <hr class="line"></hr>
