--- a/index.html
+++ b/index.html
@@ -477,7 +477,38 @@
         </div>
         <hr class="line"></hr>
       </div>
-      <div id="achievements"></div>
+      <div id="achievements">
+        <h2>OSIĄGNIĘCIA</h2>
+        <div>
+          <div>
+            <img src="./assets/Puchar1.png" alt="">
+            <div>
+              <h2>4X</h2>
+              <span>MISTRZOSTWO POLSKI</span>
+            </div>
+          </div>
+          <div>
+            <img src="./assets/Puchar2.png" alt="">
+            <div>
+              <h2>1X</h2>
+              <span>PUCHAR POLSKI</span>
+            </div></div>
+          <div>
+            <img src="./assets/Puchar3.png" alt="">
+            <div>
+              <h2>1X</h2>
+              <span>SUPERPUCHAR POLSKI</span>
+            </div>
+          </div>
+          <div>
+            <img src="./assets/Puchar4.png" alt="">
+            <div>
+              <h2>1X</h2>
+              <span>FAZA GRUPOWA LIGI MISTRZÓW</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section></section>
     <footer></footer>
