--- a/index.html
+++ b/index.html
@@ -481,28 +481,28 @@
         <h2>OSIĄGNIĘCIA</h2>
         <div>
           <div>
-            <img src="./assets/Puchar1.png" alt="">
-            <div>
+            <img src="./assets/Puchar1.png" alt="" height="118px" width="41px">
+            <div class="cups">
               <h2>4X</h2>
               <span>MISTRZOSTWO POLSKI</span>
             </div>
           </div>
           <div>
-            <img src="./assets/Puchar2.png" alt="">
-            <div>
+            <img src="./assets/Puchar2.png" alt="" height="118px" width="46px">
+            <div class="cups">
               <h2>1X</h2>
               <span>PUCHAR POLSKI</span>
             </div></div>
           <div>
-            <img src="./assets/Puchar3.png" alt="">
-            <div>
+            <img src="./assets/Puchar3.png" height="118px" width="53px">
+            <div class="cups">
               <h2>1X</h2>
               <span>SUPERPUCHAR POLSKI</span>
             </div>
           </div>
           <div>
-            <img src="./assets/Puchar4.png" alt="">
-            <div>
+            <img src="./assets/Puchar4.png" alt="" height="118px" width="68px">
+            <div class="cups">
               <h2>1X</h2>
               <span>FAZA GRUPOWA LIGI MISTRZÓW</span>
             </div>
