--- a/index.html
+++ b/index.html
@@ -510,7 +510,38 @@
         </div>
       </div>
     </section>
-    <section></section>
+    <section id="sponsors">
+      <div id="sponsorOne">
+        <h2>SPONSORZY</h2>
+        <p>SPONSOR STRATEGICZNY</p>
+        <div><img src="./assets/panattoni-glowna.png" alt=""></div>
+        <p>SPONSOR GENERALNY</p>
+        <div><img src="./assets/termoton-glowna.png" alt=""></div>
+        <p>SPONSOR GŁÓWNY</p>
+        <div><img src="./assets/murapol-glowna-1.png" alt=""></div>
+        <p>SPONSORZY OFICJALNI</p>
+        <div>
+          <img src="./assets/sts-1.jpg" alt="">
+          <img src="./assets/cobouw-www-1.jpg" alt="">
+          <img src="./assets/pkp-www-1.jpg" alt="">
+          <img src="./assets/lodzkie-lka-www-1.jpg" alt="">
+        </div>
+        <p>PARTNER LOGISTYCZNY</p>
+        <div><img src="./assets/fleet-175x120.png" alt=""></div>
+        <p>SPONSOR ROZGRYWEK</p>
+        <div><img src="./assets/pko_e.jpg" alt=""></div>
+      </div>
+      <div id="sponsorTwo">
+        <button><</button>
+        <img src="./assets/macron-www.png" alt="">
+        <img src="./assets/westminster.jpg" alt="">
+        <img src="./assets/exmo-www-1.png" alt="">
+        <img src="./assets/foodcare-www.png" alt="">
+        <img src="./assets/PAWO.jpg" alt="">
+        <button>></button>
+      </div>
+      <button>WSZYSCY SPONSORZY</button>
+    </section>
     <footer></footer>
   </body>
 </html>
