--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         </div>
       </div>
     </section>
-    <section id="sponsors">
+    <section id="partners">
       <div id="sponsorOne">
         <h2>SPONSORZY</h2>
         <p>SPONSOR STRATEGICZNY</p>
@@ -533,11 +533,11 @@
       </div>
       <div id="sponsorTwo">
         <button><</button>
-        <img src="./assets/macron-www.png" alt="">
-        <img src="./assets/westminster.jpg" alt="">
-        <img src="./assets/exmo-www-1.png" alt="">
-        <img src="./assets/foodcare-www.png" alt="">
-        <img src="./assets/PAWO.jpg" alt="">
+        <div><img src="./assets/macron-www.png" alt=""></div>
+        <div><img src="./assets/westminster.jpg" alt=""></div>
+        <div><img src="./assets/exmo-www-1.png" alt=""></div>
+        <div><img src="./assets/foodcare-www.png" alt=""></div>
+        <div><img src="./assets/PAWO.jpg" alt=""></div>
         <button>></button>
       </div>
       <button>WSZYSCY SPONSORZY</button>
