--- a/index.html
+++ b/index.html
@@ -568,11 +568,30 @@
           <p>ZAPISZ SIĘ DO NEWSLETTERA</p>
           <div>
             <button>podaj swój email</button>
-            <svg fill="#000000" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" stroke="#000000" stroke-width="0.32"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.128"></g><g id="SVGRepo_iconCarrier"> <path d="M8.489 31.975c-0.271 0-0.549-0.107-0.757-0.316-0.417-0.417-0.417-1.098 0-1.515l14.258-14.264-14.050-14.050c-0.417-0.417-0.417-1.098 0-1.515s1.098-0.417 1.515 0l14.807 14.807c0.417 0.417 0.417 1.098 0 1.515l-15.015 15.022c-0.208 0.208-0.486 0.316-0.757 0.316z"></path> </g></svg>
+            <svg id="arrowLeft" enable-background="new 0 0 512 512" viewBox="0 0 128 128" x="0px" y="0px" xmlns="http://www.w3.org/2000/svg" style=""><path id="Left_Arrow_4_" d="m44 108c-1.023 0-2.047-.391-2.828-1.172-1.563-1.563-1.563-4.094 0-5.656l37.172-37.172-37.172-37.172c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0l40 40c1.563 1.563 1.563 4.094 0 5.656l-40 40c-.781.781-1.805 1.172-2.828 1.172z"></path></svg>
           </div>
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <div>
+        <div>Wszelkie prawa zastrzeżone © Widzew Łódź</div>
+        <div>
+          <a href="">Regulaminy</a>
+          <a href="">Polityka prywatności</a>
+          <a href="">Polityka Cookies</a>
+          <a href="">Rodo</a>
+        </div>
+        <div>
+          <p>powered by</p>
+          <svg id="QRQS_logo" data-name="QRQS_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 915.94 181.3" width="70" height="13.85">
+            <defs>
+                <style>.cls-1{fill:#fff;}.cls-2{fill:#fff;}.cls-3{fill:none;stroke:#fff;stroke-miterlimit:3;stroke-width:13px;}</style>
+            </defs>
+            <path class="cls-1" d="M756.78,72.87a44,44,0,0,0-30.62,11.65c-8.53,7.77-12.79,17-12.79,27.66V140q0,18,13.77,29.21c9.18,7.47,21,11.23,35.48,11.23a63.74,63.74,0,0,0,17.83-2.33c5.38-1.55,9.38-3.34,11.94-5.31s3.93-3.77,3.93-5.2a4,4,0,0,0-1.31-2.69,4.11,4.11,0,0,0-3.08-1.31c-1,0-2.49.71-4.53,2.21a39.65,39.65,0,0,1-9.18,4.54,42.77,42.77,0,0,1-15.15,2.33c-12.19,0-22.09-3-29.77-8.9S721.83,149.88,721.83,140v-10.4h57.83a56.41,56.41,0,0,0,7.68-.35,20.76,20.76,0,0,0,6.23-1.92,9,9,0,0,0,4.85-5.13,25,25,0,0,0,1.44-9.32,36.76,36.76,0,0,0-12.79-28.56A43.7,43.7,0,0,0,756.78,72.87Zm31.8,47.32c-1.83,1-5.77,1.55-11.8,1.55H721.89v-9.56c0-8.42,3.35-15.83,10.1-22.1a35,35,0,0,1,24.72-9.44c10.1,0,18.36,3.34,24.92,10.09s9.77,14.34,9.77,22.76C791.4,117,790.48,119.17,788.58,120.19Z" transform="translate(-0.06 0)"></path><path class="cls-2" d="M649.6,106.1a48.34,48.34,0,0,0-23.5-15.7l-27.5-8.2a66.06,66.06,0,0,1-23.3-11.9c-6.4-5.2-9.7-12.3-9.7-21.2,0-8.7,3.5-16.7,10.4-24s17.6-11,32-11a68.89,68.89,0,0,1,25.8,5c8.3,3.3,12.6,5,12.8,5,1.5,0,2.9-.9,4.3-2.6a7.69,7.69,0,0,0,2-4.8c0-3.5-4.8-7-14.5-10.4a90.77,90.77,0,0,0-30.9-5.2C589.6,1.1,576,6,566.6,15.8s-14.1,21-14.1,33.7c0,11.2,3.2,20,9.7,26.6a57.27,57.27,0,0,0,23.4,14.3L613.1,99a57.35,57.35,0,0,1,23.4,13.2c6.5,6.1,9.7,14.4,9.7,25.1a27.38,27.38,0,0,1-10.7,22.3c-7.2,5.7-18.1,8.6-32.7,8.6a74,74,0,0,1-21.4-2.8c-6.3-1.9-11-3.8-14-5.8l-7.8-5.9c-2.5-2-4.3-3-5.6-3a4.76,4.76,0,0,0-3.5,1.9,6.62,6.62,0,0,0-1.7,4.5c0,5.2,5.2,10.5,15.6,16s23.3,8.2,38.7,8.2c17.6,0,31.4-4,41.3-11.9s14.9-18.8,14.9-32.7C659.3,123.9,656,113.8,649.6,106.1Z" transform="translate(-0.06 0)"></path><path class="cls-1" d="M911.93,74a4.87,4.87,0,0,0-3.08,1.13,3.39,3.39,0,0,0-1.32,2.69v62.43c0,8.42-3.41,16-10.23,22.46a34.12,34.12,0,0,1-24.39,9.8,34.52,34.52,0,0,1-24.65-9.8Q838,153,838,140.26V78a4,4,0,0,0-1.25-2.81A4.08,4.08,0,0,0,833.83,74a4.48,4.48,0,0,0-4.39,4V140.2q0,16,12.78,28a44.75,44.75,0,0,0,61,0q12.78-12,12.78-28V77.77A3.8,3.8,0,0,0,911.93,74Z" transform="translate(-0.06 0)"></path><path id="Elipsa" class="cls-3" d="M130.6,161.6A82.46,82.46,0,1,1,160.2,132" transform="translate(-0.06 0)"></path><path class="cls-1" d="M90.7,92.1h0c2.5-2.5,7-2.1,10,.9l74.9,74.9c3,3,3.4,7.5.9,10h0c-2.5,2.5-7,2.2-10-.9L91.6,102.1C88.6,99.2,88.2,94.7,90.7,92.1Z" transform="translate(-0.06 0)"></path><path class="cls-2" d="M297.8,0H284c-23.3,0-40.6,9.4-51.7,28.3V8.6c0-4.2-2.2-6.3-6.7-6.3q-6.3,0-6.3,6.3V171.2a6.6,6.6,0,0,0,1.9,4.6,5.91,5.91,0,0,0,4.5,2,7.13,7.13,0,0,0,6.7-6.7V67c0-16.1,5.1-29.1,15.4-39.1S270.2,13,284,13h13.8a6.27,6.27,0,0,0,6.3-6.3A7,7,0,0,0,302.2,2,5.56,5.56,0,0,0,297.8,0Z" transform="translate(-0.06 0)"></path><path id="Elipsa-2" class="cls-3" d="M458.5,160.3a82.46,82.46,0,1,1,29.6-29.6" transform="translate(-0.06 0)"></path><path class="cls-2" d="M418.5,90.8h0c2.5-2.5,7-2.2,10,.8l74.9,74.9c3,3,3.4,7.5.8,10h0c-2.5,2.5-7,2.2-10-.8l-74.9-74.8C416.4,97.9,416,93.4,418.5,90.8Z" transform="translate(-0.06 0)"></path><ellipse class="cls-1" cx="693.83" cy="175.15" rx="4.39" ry="4"></ellipse>
+        </svg>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
