--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         <div id="email">
           <p>ZAPISZ SIĘ DO NEWSLETTERA</p>
           <div>
-            <button>podaj swój email</button>
+            <input placeholder="podaj swój email"></input>
             <svg id="arrowLeft" enable-background="new 0 0 512 512" viewBox="0 0 128 128" x="0px" y="0px" xmlns="http://www.w3.org/2000/svg" style=""><path id="Left_Arrow_4_" d="m44 108c-1.023 0-2.047-.391-2.828-1.172-1.563-1.563-1.563-4.094 0-5.656l37.172-37.172-37.172-37.172c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0l40 40c1.563 1.563 1.563 4.094 0 5.656l-40 40c-.781.781-1.805 1.172-2.828 1.172z"></path></svg>
           </div>
         </div>
